# boss-zhipin-mcp

./: .gitignore  FUSION_OPTIMIZATION.md  GITHUB_PUSH_GUIDE.md  LLM_CONFIG.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_REPORT.md  PUSH_TO_NEW_REPO.md  README.md  STAR_GROWTH_STRATEGY.md  commit_msg.txt  install.sh  mcp.json  pyproject.toml  requirements.txt  test_v3.py
.github/workflows/: auto-push.yml
docker/: Dockerfile  docker-compose.yml
src/boss_mcp/: __init__.py  anti_detection.py  anti_detection_v2.py  boss_client.py  boss_client_async.py  llm_adapter.py  login.py  resume_parser.py  server.py  server_async.py  server_http.py
src/boss_mcp/v3/: server_v3.py
